# ImageComparisonTool

./: .gitignore  =1.0.0  CHANGELOG.md  COMMIT_HASH_REPRODUCIBILITY.md  GUI_UPDATES.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  MARKDOWN_EXPORT.md  PYPI_PUBLISHING.md  README_UPDATED.md  RECENT_CHANGES.md  REQUIREMENTS_TXT_FIX.md  SETUP_GUIDE.md  TESTING.md  TEST_FILES_README.md  cheatsheet.md  check_history_db.py  contributing.md  debug_flip_reports.py  debug_history_path.py  find_history_db.py  img_compare_offline_setup.sh  license.md  offline_setup_win.bat  pytest.ini  quickstart.md  readme.md  requirements.py  requirements.txt  setup.cfg  setup.py  test_3d_rendering.bat  test_3d_rendering.sh  test_annotations.py  test_basic_cli.bat  test_basic_cli.sh  test_full_options.bat  test_full_options.sh  test_histogram_config.sh  test_history_creation.py  (+6 more)
.claude/: settings.local.json
.github/: feature_template.md  issue_template.md  pr_template.md
ExampleCommandLines/: TEST_FILES_README.md  TEST_ORGANIZATION.md  test_3d_rendering.bat  test_basic_cli.bat  test_full_options.bat  test_histogram_config.bat  test_historical_tracking_manual.py  test_history_simple.py  test_lenient_comparison.bat  test_strict_comparison.sh  test_with_report.bat  test_with_report.sh
ImageComparisonSystem/: __init__.py  analyzers.py  check_script.py  comparator.py  config.py  dependencies.py  logging_config.py  main.py  manifest.py  markdown_exporter.py  models.py  processor.py  report_generator.py  ui.py  verify.py
Planning/: NVIDIA_FLIP_Integration_Plan.md
documentation/: ARCHITECTURE.md  (+13 more)
(+40 files in other folders)
