[metadata]
name = image-comparison-system
version = attr: setuptools_scm.get_version

[options]
packages = find:
python_requires = >=3.8
install_requires =
    Pillow>=10.0.0
    numpy>=1.24.0
    opencv-python>=4.8.0
    scikit-image>=0.21.0
    matplotlib>=3.7.0

[options.packages.find]
where = .
include = ImageComparisonSystem*

[bdist_wheel]
universal = False

[egg_info]
tag_build =
tag_date = 0
