[metadata]
name = image-comparison-system
version = attr: setuptools_scm.get_version

[options]
packages = find:
python_requires = >=3.8
install_requires =
    Pillow>=8.0.0,<12.0.0
    numpy>=1.19.0,<2.0.0
    opencv-python>=4.5.0
    scikit-image>=0.19.0
    matplotlib>=3.3.0

[options.packages.find]
where = .
include = ImageComparisonSystem*

[bdist_wheel]
universal = False

[egg_info]
tag_build =
tag_date = 0
